# gruzhub

./: .env.example  .gitignore  README.md  docker-compose.yml.example  license.md
backend-python/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile_app  Dockerfile_background  Dockerfile_telegram  alembic.ini  pyproject.toml  readme.md
backend-python/alembic/: README  env.py
backend-python/alembic/versions/: 2023-12-09_init.py  2023-12-10_add_tg_to_user.py  2023-12-13_add_user_info_change.py  2023-12-18_add_orders_indices.py  2023-12-18_extend_order_status_enum.py  2023-12-22_add_logs_table.py  2023-12-24_add_countries.py  2023-12-24_add_country_to_region.py  2023-12-24_make_region_country_mandatory.py  2023-12-27_add_order_status_changes.py  2023-12-31_add_order_status_change_comment.py  2024-01-02_move_order_status_to_string.py  2024-01-05_add_last_status_update_time.py  2024-01-05_add_orders_notifications.py  2024-01-05_make_status_update_time_mandatory.py  2024-01-12_add_order_notes.py  2024-01-12_add_order_urgency.py  2024-01-20_add_order_messages.py  2024-01-22_add_files_to_messages.py  2024-01-31_add_chat_codes_to_user.py  2024-01-31_add_telegram_chats.py  2024-11-12_change_user_role_type.py  2024-11-13_change_chat_codes.py  2024-11-16_change_auto_enum_type.py  2024-11-17_change_order_status_to_enum.py  2024-11-18_change_declined_masters_ids_to_string.py  2024-11-18_change_message_role.py  2024-11-18_make_masters_ids_nullable.py  (+2 more)
backend-python/src/: constants.py  main_app.py  main_background.py  main_telegram.py
backend-python/tests/: conftest.py
(+419 files in other folders)
